<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter search query</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="label_search_options">Advanced search options</string>
    <string name="btnSave">Save</string>
    <string name="pref_image_size">Image Size</string>
    <string name="pref_color_filter">Color Filter</string>
    <string name="pref_image_type">Image Type</string>
    <string name="pref_site_filter">Site Filter</string>
    <string name="title_activity_settings">Advanced Search Options</string>
    <string name="empty_list_label">Search for your favorite images</string>
    <string name="offline_label">No internet connection</string>
    <string name="no_internet">No internet connection</string>
    <string name="action_share">share</string>
    <string name="no_results">No results found</string>

    <string-array name="arrSize">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="arrType">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string-array name="arrColor">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
    </string-array>

</resources>
