<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.shivagss.imagesearch.SettingsDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSize"
        android:text="@string/pref_image_size"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spSize"
        android:entries="@array/arrSize"
        android:layout_toRightOf="@id/tvSize"
        android:layout_alignBottom="@id/tvSize"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvColor"
        android:layout_below="@id/tvSize"
        android:text="@string/pref_color_filter"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spColor"
        android:entries="@array/arrColor"
        android:layout_toRightOf="@id/tvColor"
        android:layout_alignBottom="@id/tvColor"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvType"
        android:layout_below="@id/tvColor"
        android:text="@string/pref_image_type"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spType"
        android:entries="@array/arrType"
        android:layout_toRightOf="@id/tvType"
        android:layout_alignBottom="@id/tvType"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSite"
        android:layout_below="@id/tvType"
        android:text="@string/pref_site_filter"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:layout_toRightOf="@id/tvSite"
        android:layout_alignBottom="@id/tvSite"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_marginTop="20dp"
        android:layout_below="@id/etSite"
        android:text="@string/btnSave"
        android:onClick="onSave"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
